# ROS2_foundation

./: .gitignore  DEVELOPMENT.md  LICENSE  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  setup.sh
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: adding_components.md  architecture.md  getting_started.md
docs/tutorials/: tutorial_01_first_component.md
scripts/: build.sh  run_basic.sh  run_simulation.sh
src/: .repos
src/foundation_bringup/: CMakeLists.txt  package.xml
src/foundation_bringup/launch/: basic_system.launch.py
src/foundation_common/: CMakeLists.txt  package.xml
src/foundation_common/foundation_common/: __init__.py  system_monitor_node.py
src/foundation_common/include/foundation_common/: base_component.hpp  system_monitor.hpp  tf_helper.hpp
src/foundation_common/src/: base_component.cpp  system_monitor.cpp  tf_helper.cpp
src/foundation_common/test/: test_base_component.cpp
src/foundation_description/: CMakeLists.txt  package.xml
src/foundation_description/launch/: display.launch.py
src/foundation_description/meshes/: README.md
src/foundation_description/rviz/: view_robot.rviz
src/foundation_description/urdf/: common_macros.xacro  foundation_robot.urdf.xacro
src/foundation_examples/: CMakeLists.txt  package.xml
src/foundation_examples/scripts/: mock_actuator_component.py
src/foundation_interfaces/: CMakeLists.txt  package.xml
src/foundation_interfaces/action/: ExecuteTask.action  MoveToPosition.action
src/foundation_interfaces/msg/: ComponentStatus.msg  RobotStatus.msg  SystemHealth.msg
src/foundation_interfaces/srv/: ConfigureComponent.srv  GetSystemInfo.srv  SetMode.srv
src/foundation_simulation/: CMakeLists.txt  package.xml
src/foundation_simulation/launch/: simulation.launch.py
src/foundation_simulation/worlds/: foundation_world.sdf
